Added TYPES abstract

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
         <h2 id="publications" class="anchor">Publications</h2>
         <h4 id="publications-pl-typetheory" class="anchor">Programming languages, type theory and proof assistants</h4>
         <ul>
+          <li>Danil Annenkov, Bas Spitters. Deep and Shallow Embeddings in Coq. TYPES-2019.
+            [<a target="_blank" href="papers/TYPES2019-abstract.pdf">PDF</a>]
+          </li>
           <li>Danil Annenkov, Martin Elsman. Certified Compilation of Financial Contracts. Accepted at PPDP’18.
             [<a target="_blank" href="papers/annenkov-elsman-ppdp18.pdf">PDF</a>]
             [<a target="_blank" href="https://dl.acm.org/citation.cfm?id=3236955">ACM</a>]
