ConCer paper. Misc updates

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           8200 Aarhus
         </p>
         <p><strong>Email</strong>: danil.v.annenkov at gmail.com</p>
+        <p><a href="https://www.researchgate.net/profile/Danil_Annenkov">ResearchGate profile</a>, <a href="https://arxiv.org/a/annenkov_d_1.html">arXiv profile</a></p>
       </div>
       <div id="main">
         <h2 id="research" class="anchor">Research interests</h2>
@@ -80,10 +81,19 @@
         <h2 id="publications" class="anchor">Publications</h2>
         <h4 id="publications-pl-typetheory" class="anchor">Programming languages, type theory and proof assistants</h4>
         <ul>
+          <li>Danil Annenkov, Jakob Botsch Nielsen, Bas Spitters. ConCert: A Smart Contract Certification Framework in Coq. CPP'2020.
+            [<a target="_blank" href="https://arxiv.org/abs/1907.10674">arXiv</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]
+          </li>
           <li>Danil Annenkov, Bas Spitters. Deep and Shallow Embeddings in Coq. TYPES-2019.
             [<a target="_blank" href="papers/TYPES2019-abstract.pdf">PDF</a>]
           </li>
-          <li>Danil Annenkov, Martin Elsman. Certified Compilation of Financial Contracts. Accepted at PPDP’18.
+          <li>Danil Annenkov, Paolo Capriotti, Nicolai Kraus, Christian Sattler.
+            Two-Level Type Theory and Applications. Submitted to Mathematical Structures in Computer Science (MSCS), 2019.
+            [<a target="_blank" href="https://arxiv.org/abs/1705.03307">arXiv</a>]
+            [<a target="_blank" href="https://github.com/annenkov/two-level">
+              Lean code</a>]
+          </li>
+          <li>Danil Annenkov, Martin Elsman. Certified Compilation of Financial Contracts. PPDP’18.
             [<a target="_blank" href="papers/annenkov-elsman-ppdp18.pdf">PDF</a>]
             [<a target="_blank" href="https://dl.acm.org/citation.cfm?id=3236955">ACM</a>]
             [<a target="_blank" href="https://github.com/annenkov/contracts">Futhark, Haskell and Coq code</a>]
@@ -97,13 +107,6 @@
           <li>Adventures in Formalisation: Financial Contracts, Modules, and Two-Level Type Theory. PhD thesis, University of Copenhagen, 2018
             [<a target="_blank" href="papers/DanilAnnenkovThesis.pdf">PDF</a>]
             [<a target="_blank" href="https://arxiv.org/abs/1811.11317f">arXiv</a>]</li>
-          <li>Danil Annenkov, Paolo Capriotti, Nicolai Kraus.
-            Two-Level Type Theory and Applications. Submitted to ACM Transactions on
-            Computational Logic (TOCL)
-            [<a target="_blank" href="https://arxiv.org/abs/1705.03307">arXiv</a>]
-            [<a target="_blank" href="https://github.com/annenkov/two-level">
-              Lean code</a>]
-          </li>
           <li>
             Danil Annenkov and Martin Elsman. Towards Certified Compilation of Financial Contracts.
             In Proceedings of the 28th Nordic Workshop on Programming Theory (NWPT’16).
