Add the official CPP pdf

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h4 id="publications-pl-typetheory" class="anchor">Programming languages, type theory and proof assistants</h4>
         <ul>
           <li>Danil Annenkov, Jakob Botsch Nielsen, Bas Spitters. ConCert: A Smart Contract Certification Framework in Coq. CPP'2020.
-            [<a target="_blank" href="https://arxiv.org/abs/1907.10674">arXiv</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]
+            [<a target="_blank" href="papers/ConCert-cpp2020-final.pdf">PDF</a>][<a target="_blank" href="https://arxiv.org/abs/1907.10674">arXiv</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]
           </li>
           <li>Danil Annenkov, Bas Spitters. Deep and Shallow Embeddings in Coq. TYPES-2019.
             [<a target="_blank" href="papers/TYPES2019-abstract.pdf">PDF</a>]
