--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h3>Contacts</h3>
         <p><strong>Address:</strong>
           IT-byen Katrinebjerg <br>
-          Åbogade 34, Turing building, office 226, <br>
+          Åbogade 34, Nygaard Building (5335), office 267, <br>
           8200 Aarhus
         </p>
         <p><strong>Email</strong>: danil.v.annenkov at gmail.com</p>
