--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
           8200 Aarhus
         </p>
         <p><strong>Email</strong>: danil.v.annenkov at gmail.com</p>
-        <p><a href="https://www.researchgate.net/profile/Danil_Annenkov">ResearchGate profile</a>, <a href="https://arxiv.org/a/annenkov_d_1.html">arXiv profile</a></p>
+        <p><a target="_blank" href="https://scholar.google.com/citations?user=JjtxzfkAAAAJ&hl=en">Google Scholar profile</a>,
+          <a target="_blank" href="https://www.researchgate.net/profile/Danil_Annenkov">ResearchGate profile</a>,
+          <a target="_blank" href="https://arxiv.org/a/annenkov_d_1.html">arXiv profile</a></p>
       </div>
       <div id="main">
         <h2 id="research" class="anchor">Research interests</h2>
@@ -81,6 +83,7 @@
         <h2 id="publications" class="anchor">Publications</h2>
         <h4 id="publications-pl-typetheory" class="anchor">Programming languages, type theory and proof assistants</h4>
         <ul>
+          <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, and Bas Spitters. “Verifying, testing and running smart contracts in ConCert”. Extended abstract. The Coq workshop 2020.</li> [<a target="_blank" href="papers/ConCert-coq-workshop-2020.pdf">PDF</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]
           <li>Danil Annenkov, Jakob Botsch Nielsen, Bas Spitters. ConCert: A Smart Contract Certification Framework in Coq. CPP'2020.
             [<a target="_blank" href="papers/ConCert-cpp2020-final.pdf">PDF</a>][<a target="_blank" href="https://arxiv.org/abs/1907.10674">arXiv</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]
           </li>
@@ -163,6 +166,12 @@
         </ul>
         <h2 id="talks" class="anchor">Talks</h2>
         <ul>
+          <li>
+            A lecture on smart contracts on the association of computer scientists (<a target="blank" href="https://www.datalogforeningen.dk/stormoede-2019-indbydelse/">Datalogforeningen</a>) meeting. Aarhus, 2019.
+            [<a target="_blank" href="papers/smart-contracts-datalogforeningen-2019-slides.pdf">Slides]</a>
+          <li>Towards Safer Smart Contract Languages. Digital Innovation Festival, Aarhus, 2019.
+            [<a target="_blank" href="papers/smart-contracts-innovation-festival-2019-slides.pdf">Slides</a>]</li>
+          </li>
           <li>Danil Annenkov, Bas Spitters. Deep and Shallow Embeddings in Coq. TYPES-2019.
             [<a target="_blank" href="papers/TYPES2019-slides.pdf">Slides</a>]
           </li>
@@ -186,32 +195,33 @@
           </li>
         </ul>
 
-        <h2 id="projects" class="anchor">Previous affiliations </h2>
-        <item>
-          <ul>
-            <li>Feb. 2018 - Nov. 2018. Postdoc at INRIA Nantes, working on
-              <a href="http://coqhott.gforge.inria.fr/" target="_blank">CoqHoTT project</a> with Nicolas Tabareau
-            </li>
-            <li>Nov. 2014 - Jan. 2018. PhD student at University Of Copenhagen on <a href="http://hiperfit.dk/" target="_blank">HIPERFIT project</a>
-              under the supervision of Martin Elsman
-            </li>
-          </ul>
-        </item>
-        <h2 id="projects" class="anchor">Projects and repositories</h2>
-        <p>
-          Not exhaustive list of projects I have contributed to.
-          My repositories:
-          on <a target="_blank" href="https://github.com/annenkov/">GitHub</a>,
-          on <a target="_blank" href="https://bitbucket.org/ib_soft/">Bitbucket</a>
-        </p>
-        <h3><a target="_blank" href="https://github.com/CoqHott/template-coq-forcing/tree/sprop">Forcing translation in Template Coq</a></h3>
-        <p>Implementation of the CBN forcing translation using typed meta-programming facilities of
-          Template Coq. Based on the OCaml forcing translation plugin (by Jaber, Pédrot, Sozeau,
-          Lewertowski and Tabareau, <a target="_blank"  href="https://github.com/CoqHott/coq-forcing"> link to the repo
-          </a>).
-          Current implementation uses the version of Coq supporting definitional proof-irrelevance
-          (by Gaëtan Gilbert, <a target="_blank"  href="https://github.com/SkySkimmer/coq"> link to the repo </a>).
-        </p>
+          <h2 id="projects" class="anchor">Previous affiliations </h2>
+          <item>
+            <ul>
+              <li>Feb. 2018 - Nov. 2018. Postdoc at INRIA Nantes, working on
+                <a href="http://coqhott.gforge.inria.fr/" target="_blank">CoqHoTT project</a> with Nicolas Tabareau
+              </li>
+              <li>Nov. 2014 - Jan. 2018. PhD student at University Of Copenhagen on <a href="http://hiperfit.dk/" target="_blank">HIPERFIT project</a>
+                under the supervision of Martin Elsman
+              </li>
+            </ul>
+          </item>
+          <h2 id="projects" class="anchor">Projects and repositories</h2>
+          <p>
+            Not exhaustive list of projects I have contributed to.
+            My repositories:
+            on <a target="_blank" href="https://github.com/annenkov/">GitHub</a>,
+            on <a target="_blank" href="https://bitbucket.org/ib_soft/">Bitbucket</a>
+          </p>
+          <h3><a target="_blank" href="https://github.com/CoqHott/template-coq-forcing/tree/sprop">Forcing translation in Template Coq</a></h3>
+          <p>Implementation of the CBN forcing translation using typed meta-programming facilities of
+            Template Coq. Based on the OCaml forcing translation plugin (by Jaber, Pédrot, Sozeau,
+            Lewertowski and Tabareau, <a target="_blank"  href="https://github.com/CoqHott/coq-forcing"> link to the repo
+            </a>).
+            Current implementation uses the version of Coq supporting definitional proof-irrelevance
+            (by Gaëtan Gilbert, <a target="_blank"  href="https://github.com/SkySkimmer/coq"> link to the repo </a>).
+          </p>
+        </ul>
         <h3><a target="_blank" href="https://github.com/annenkov/two-level">
             Two-level type theory</a></h3>
         <p>
@@ -242,7 +252,7 @@
             Normalisation for Simply-Typed Lambda-calculus in Coq</a>
           [<a href="https://annenkov.github.io/stlcnorm/Stlc.stlc.html">nice-looking coqdoc-html version</a>]</h3>
         <p>An elegant and self-contained proof of normalisation for call-by-value
-          simply-typed lambda calculus using Tait's method in the Coq proof assistant.</p>
+          simply-typed lambda calculus using Tait's method in the Coq proof assistant. Nominal representation of variables. Categorical semantics of the simply-typed lambda calculus. </p>
         <h3><a target="_blank" href="https://github.com/HIPERFIT/prototype">
             The HIPERFIT Portfolio Management Prototype</a></h3>
         <p>
@@ -277,6 +287,11 @@
           IDE plugin with syntax highlighting, perform semantic analysis and context completion.
           My implementation aims to give an environment to experiment with the supercompiler for educational purposes.
         </p>
+        <h3><a target="_blank" href=" https://github.com/annenkov/haskell-bio">
+            Some bioinformatics algorithms in Haskell </a></h3>
+          <p>
+            Implementation of brute-force Regulatory Motifs Finding algorithm (formulated as a median string problem) with two branch-and-bound strategies.
+          </p>
         <h2 id="CV" class="anchor">CV</h2>
       </div>
       <p>My CV in PDF format is available <a target="_blank" href="docs/CV_Annenkov.pdf">here</a>
