--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             [<a target="_blank" href="https://github.com/annenkov/contracts">Futhark, Haskell and Coq code</a>]
           </li>
           <li>Martin Elsman, Troels Henriksen, Danil Annenkov, Cosmin Oancea.
-            Static Interpretation of Higher-Order Modules in Futhark. ICFP’18.
+            Static Interpretation of Higher-Order Modules in Futhark: functional GPU programming in the large. ICFP’18.
             [<a target="_blank" href="papers/futhark-modules-icfp18.pdf">PDF</a>]
             [<a target="_blank" href="https://dl.acm.org/citation.cfm?id=3236792">ACM OpenAccess</a>]
             [<a target="_blank" href="https://github.com/diku-dk/futhark-icfp18">Coq formalisation</a>]
