Add paper on price models

--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
         </ul>
         <h4 id="publications-stochastic-models" class="anchor">Stochastic models in finance</h4>
         <ul>
+          <li>Annenkov, D.V. Dynamics of price changes of financial instruments (some problems of theory and practice). ECONOMINFO #6, 2006. (in Russian: Анненков, Д. В. (2006). Динамика изменения цен финансовых инструментов (некоторые проблемы теории и практики). ЭКОНОМИНФО, (6)).
+            [<a target="_blank" href="./papers/price-dynamics-econominfo-2006.pdf"> PDF</a>]
+            [<a target="_blank" href="https://doi.org/10.24412/Fioqh9UJ8yg"> DOI: 10.24412/Fioqh9UJ8yg</a>]
+                 </li>
           <li>
             Annenkov, D.V., Simulation and research of the securities market.
             Bulletin of the Irkutsk State Technical University, vol. 27, #3, pp. 68-71 (in Russian), 2006.
@@ -168,7 +172,7 @@
         <ul>
           <li>
             A lecture on smart contracts on the association of computer scientists (<a target="blank" href="https://www.datalogforeningen.dk/stormoede-2019-indbydelse/">Datalogforeningen</a>) meeting. Aarhus, 2019.
-            [<a target="_blank" href="papers/smart-contracts-datalogforeningen-2019-slides.pdf">Slides]</a>
+            [<a target="_blank" href="papers/smart-contracts-datalogforeningen-2019-slides.pdf">Slides</a>]
           <li>Towards Safer Smart Contract Languages. Digital Innovation Festival, Aarhus, 2019.
             [<a target="_blank" href="papers/smart-contracts-innovation-festival-2019-slides.pdf">Slides</a>]</li>
           </li>
