Add a DSL paper

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
             36th International Convention on Information and
             Communication Technology, Electronics and Microelectronics (MIPRO),
             IEEE, pp. 1084-1087, 2013
+            [<a target="_blank" href="papers/MIPRO_Annenkov_Cherkashin_Model_Generation_Stratego_rewriting_language-FULL-v2.pdf">PDF</a>]
             [<a target="_blank" href="http://ieeexplore.ieee.org/document/6596418/">IEEEXplore </a> ].
           </li>
           <li>
