Add an old paper PDF, fixed metadata

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
             Proc. of International Conference on Applied Internet and Information Technologies,
             University of Novi Sad Technical Faculty «Mihailo Pupin»,
             Zrenjanin, Serbia, 2013. C. 252-257.
+            [<a target="_blank" href="papers/AIIT-2013-Document-Content-Logical-Layer-Induction.pdf">PDF</a>]
             [<a target="_blank" href="http://www.tfzr.uns.ac.rs/aiit/old/archives/AIIT2013/Proceedings.pdf"> Proceedings </a>]
           </li>
           <li>
