Change office; add pdf

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h3>Contacts</h3>
         <p><strong>Address:</strong>
           IT-byen Katrinebjerg <br>
-          Åbogade 34, Nygaard Building (5335), office 267, <br>
+          Åbogade 34, Nygaard Building (5335), office 390, <br>
           8200 Aarhus
         </p>
         <p><strong>Email</strong>: danil.v.annenkov at gmail.com</p>
@@ -151,6 +151,7 @@
             Annenkov, D.V., Information Systems Framework Synthesis on the Base of a Logical Approach.
             Proceedings of International Conference on Applied Internet and Information Technologies,
             October 26, Serbia, Zrenjanin. pp. 239-244, 2012.
+            [<a target="_blank" href="papers/AIIT-2012-Information-Systems-Synthesis.pdf">PDF</a>]
             [<a target="_blank" href="http://www.tfzr.uns.ac.rs/aiit/old/archives/AIIT2012/Proceedings_AIIT2012.pdf">
               Proceedings
             </a>]
