Add recent talks, slides, links to videos

--- a/index.html
+++ b/index.html
@@ -171,9 +171,18 @@
             Modeling the organization and functioning of the securities market. Proceedings of conference “Vinerovskie chteniya”, pp. 35-40, 2005
           </li>
         </ul>
-        <h2 id="talks" class="anchor">Talks</h2>
+        <h2 id="talks" class="anchor">Selected talks</h2>
         <ul>
+          <li> Verifying, testing and running smart contracts in ConCert, The Coq Workshop (virtual), July 2020.
+            [<a target="_blank" href="papers/Coq2020_04-03-concert-slides.pdf">Slides</a>]
+            [<a target="_blank" href="https://www.youtube.com/watch?v=tROOcO44Uho&t=12593s">Video</a>]
+          </li>
+          <li> ConCert: A Smart Contract Certification Framework in Coq. Certified Programs and Proofs, New Orleans, Louisiana, United States, January 2020.
+            [<a target="_blank" href="papers/cpp20-ConCert-slides.pdf">Slides</a>]
+            [<a target="_blank" href="https://youtu.be/LkvqIYTelwg">Video</a>]
+          </li>
           <li>
+            [<a target="_blank" href="papers/smart-contracts-innovation-festival-2019-slides.pdf">Slides</a>]</li>
             A lecture on smart contracts on the association of computer scientists (<a target="blank" href="https://www.datalogforeningen.dk/stormoede-2019-indbydelse/">Datalogforeningen</a>) meeting. Aarhus, 2019.
             [<a target="_blank" href="papers/smart-contracts-datalogforeningen-2019-slides.pdf">Slides</a>]
           <li>Towards Safer Smart Contract Languages. Digital Innovation Festival, Aarhus, 2019.
