--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h2 id="publications" class="anchor">Publications</h2>
         <h4 id="publications-pl-typetheory" class="anchor">Programming languages, type theory and proof assistants</h4>
         <ul>
-          <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, and Bas Spitters. “Verifying, testing and running smart contracts in ConCert”. Extended abstract. The Coq workshop 2020.</li> [<a target="_blank" href="papers/ConCert-coq-workshop-2020.pdf">PDF</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]
+          <li>Danil Annenkov, Mikkel Milo, Jakob Botsch Nielsen, and Bas Spitters. “Verifying, testing and running smart contracts in ConCert”. Extended abstract. The Coq workshop 2020.</li> [<a target="_blank" href="papers/ConCert-coq-workshop-2020.pdf">PDF</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]          
           <li>Danil Annenkov, Jakob Botsch Nielsen, Bas Spitters. ConCert: A Smart Contract Certification Framework in Coq. CPP'2020.
             [<a target="_blank" href="papers/ConCert-cpp2020-final.pdf">PDF</a>][<a target="_blank" href="https://arxiv.org/abs/1907.10674">arXiv</a>][<a target="_blank" href="https://github.com/AU-COBRA/ConCert">Coq code</a>]
           </li>
@@ -176,6 +176,7 @@
           <li> Verifying, testing and running smart contracts in ConCert, The Coq Workshop (virtual), July 2020.
             [<a target="_blank" href="papers/Coq2020_04-03-concert-slides.pdf">Slides</a>]
             [<a target="_blank" href="https://www.youtube.com/watch?v=tROOcO44Uho&t=12593s">Video</a>]
+            [<a target="_blank" href="https://coq-workshop.gitlab.io/2020/abstracts/Coq2020_04-03-concert.pdf">Extended abstract</a>]
           </li>
           <li> ConCert: A Smart Contract Certification Framework in Coq. Certified Programs and Proofs, New Orleans, Louisiana, United States, January 2020.
             [<a target="_blank" href="papers/cpp20-ConCert-slides.pdf">Slides</a>]
