--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <li> A lecture on smart contracts on the association of computer scientists (<a target="blank" href="https://www.datalogforeningen.dk/stormoede-2019-indbydelse/">Datalogforeningen</a>) meeting. Aarhus, Denmark, November 2019.
             [<a target="_blank" href="papers/smart-contracts-datalogforeningen-2019-slides.pdf">Slides</a>]
           </li>
-          <li>Danil Annenkov, Bas Spitters. Deep and Shallow Embeddings in Coq. Oslo, Norway. 25th International Conference on Types for Proofs and Programs (TYPES), June 2019.
+          <li> Deep and Shallow Embeddings in Coq. Oslo, Norway. 25th International Conference on Types for Proofs and Programs (TYPES), June 2019.
             [<a target="_blank" href="papers/TYPES2019-slides.pdf">Slides</a>]
           </li>
           <li>Towards Safer Smart Contract Languages. Digital Innovation Festival. Aarhus, Denmark, April 2019.
